--- a/index.html
+++ b/index.html
@@ -7,32 +7,45 @@
     <link rel="icon" type="image/png" href="images/icon.png">
     <title>Serv'Drone</title>
 
+    <meta name="description" content="Serv'Drone propose des solutions innovantes en technologie de drones pour simplifier votre quotidien. Découvrez nos services de drones pour l'aide ménagère, la préparation de repas, et plus encore.">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Serv'Drone | Services de Drones Innovants">
+    <meta property="og:description" content="Serv'Drone offre des services de drones innovants pour améliorer votre quotidien. Explorez nos solutions high-tech pour l'aide ménagère, la préparation de repas, et plus encore.">
+    <meta property="og:image" content="images/icon.png">
+    <meta property="og:url" content="https://www.votre-site-web.com/">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Serv'Drone | Services de Drones Innovants">
+    <meta name="twitter:description" content="Serv'Drone propose des solutions de drones innovantes pour vos besoins quotidiens, de l'aide ménagère à la préparation de repas. Découvrez nos services.">
+    <meta name="twitter:image" content="images/icon.png">
+
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
     <link rel="stylesheet" href="style.css">
+
   </head>
   <body>
     <header class="header">
-        <div class="navbar">
-          <div class="container container-navbar">
-            <a href="#"><img src="images/icon.png"></a>
-            <nav class="nav">
-              <a href="about.html" class="bold">Qui sommes-nous ?</a>
-              <a href="services.html" class="bold">Nos services</a>
-              <a href="story.html" class="light">Histoire</a>
-              <a href="event.html" class="light">Évènement</a>
-              <a href="support.html" class="light">Support</a>
-              <a href="contact.html" class="light last-nav">Contact</a>
-              <div class="social-networks">
-                <a href="#"><span class="fa fa-instagram fa-2x"></span></a>
-                <a href="#"><span class="fa fa-twitter-square fa-2x"></span></a>
-                <a href="#" class="last-nav"><span class="fa fa-facebook-square fa-2x"></span></a>
-              </div>
-            </nav>
-          </div>
+      <div class="navbar">
+        <div class="container container-navbar">
+          <a href="index.html" aria-label="Lien vers la page d'accueil"><img src="images/icon.png" alt="Icone Serv'Drone"></a>
+          <nav class="nav" aria-label="Navigation principale">
+            <a href="#" class="bold active" aria-label="Lien vers la section Qui sommes-nous ?" title="Découvrez l'histoire de serv'drone">Qui sommes-nous ?</a>
+            <a href="services.html" class="bold" aria-label="Lien vers la page Nos services" title="Découvrez notre gamme de drones domestique">Nos services</a>
+            <a href="story.html" class="light" aria-label="Lien vers la page Histoire" title="Découvrez l'histoire de serv'drone">Histoire</a>
+            <a href="event.html" class="light" aria-label="Lien vers la page Évènement" title="Découvrez les éveènements de drone autour de NOMDELAVILLE">Évènement</a>
+            <a href="support.html" class="light" aria-label="Lien vers la page Support">Support</a>
+            <a href="contact.html" class="light last-nav" aria-label="Lien vers la page Contact">Contact</a>
+            <div class="social-networks" aria-label="Réseaux sociaux">
+              <a href="#" aria-label="Lien vers Instagram" title="Suivez nous sur l'Instagram de serv'drone"><span class="fa fa-instagram fa-2x"></span></a>
+              <a href="#" aria-label="Lien vers Twitter" title="Suivez nous sur le Twitter de serv'drone"><span class="fa fa-twitter-square fa-2x"></span></a>
+              <a href="#" class="last-nav" aria-label="Lien vers Facebook" title="Suivez nous sur le Facebook de serv'drone"><span class="fa fa-facebook-square fa-2x"></span></a>
+            </div>
+          </nav>
         </div>
+      </div>
       </div>
  
       <div class="container">
@@ -46,7 +59,11 @@
     <div class="technology">
       <div class="container">
         <h2 class="title">Innovation</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque felis, ipsum enim, in ipsum tristique ullamcorper risus malesuada. Dictum posuere elit etiam faucibus semper in risus curabitur arcu. Et vel eget elementum enim, nulla. </p>
+        <p>Chez Serv'Drone, nous révolutionnons le confort domestique grâce à une technologie de pointe. Nos drones multifonctionnels sont conçus pour transformer votre quotidien en offrant une gamme complète de services, allant de la surveillance intérieure et extérieure à l'assistance au stationnement de votre véhicule. Grâce à notre technologie de pointe, vous bénéficiez d'une sécurité domestique accrue et d'une protection avancée.
+
+          Nous sommes fiers de proposer des solutions innovantes telles que l'escorte avancée d'enfants, la promenade d'animaux, et la récupération de colis. Nos drones ne se contentent pas de surveiller, ils assistent également dans des tâches domestiques comme le repassage automatique et le dépoussiérage de meubles, garantissant ainsi un confort et une commodité inégalés.
+          
+          Notre engagement vers la haute sécurité et le service premium vous assure des prestations de qualité haut de gamme avec une garantie étendue pour chaque produit. Chez Serv'Drone, nous allions innovation et assistance quotidienne pour vous offrir un confort domestique optimal.</p>
       </div>
       <div class="tech-img"></div>
     </div>
