--- a/about.html
+++ b/about.html
@@ -4,9 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <meta name="title" content="Serv'Drone - Drones multifonctions pour votre confort et sécurité">
+    <meta name="description" content="Découvrez Serv'Drone, une gamme de drones multifonctions offrant assistance domestique, surveillance, sécurité, repassage, nettoyage ou encore garde d’enfant.">
+    <meta name="description" content="Serv'Drone est une start-up française spécialisée dans les drones nouvelle génération pour des services innovants au quotidien. Découvrez notre histoire, nos fondateurs et nos solutions technologiques.">
+    <meta name="author" content="Serv'Drone">
 
     <link rel="icon" type="image/png" href="images/favicon.png">
-    <title>Serv'Drone</title>
+    <title>Serv'Drone : La Révolution Technologique au Service du Quotidien</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
 
@@ -14,21 +19,21 @@
 
     <link rel="stylesheet" href="style.css">
 </head>
-<header class="header header-small header-1">
+<header class="header header-small header-1" aria-label="Header pour Serv'Drone, proposant des drones multifonctions pour la sécurité et le confort domestique">
     <div class="navbar">
       <div class="container container-navbar">
-        <a href="index.html"><img src="images/icon.png"></a>
-        <nav class="nav">
-          <a href="#" class="bold active">Qui sommes-nous ?</a>
-          <a href="services.html" class="bold">Nos services</a>
-          <a href="story.html" class="light">Histoire</a>
-          <a href="event.html" class="light">Évènement</a>
-          <a href="support.html" class="light">Support</a>
-          <a href="contact.html" class="light last-nav">Contact</a>
-          <div class="social-networks">
-            <a href="#"><span class="fa fa-instagram fa-2x"></span></a>
-            <a href="#"><span class="fa fa-twitter-square fa-2x"></span></a>
-            <a href="#" class="last-nav"><span class="fa fa-facebook-square fa-2x"></span></a>
+        <a href="index.html" aria-label="Lien vers la page d'accueil"><img src="images/icon.png" alt="Icone Serv'Drone"></a>
+        <nav class="nav" aria-label="Navigation principale">
+          <a href="#" class="bold active" aria-label="Lien vers la section Qui sommes-nous ?" title="Découvrez l'histoire de serv'drone">Qui sommes-nous ?</a>
+          <a href="services.html" class="bold" aria-label="Lien vers la page Nos services" title="Découvrez notre gamme de drones domestique">Nos services</a>
+          <a href="story.html" class="light" aria-label="Lien vers la page Histoire" title="Découvrez l'histoire de serv'drone">Histoire</a>
+          <a href="event.html" class="light" aria-label="Lien vers la page Évènement" title="Découvrez les éveènements de drone autour de NOMDELAVILLE">Évènement</a>
+          <a href="support.html" class="light" aria-label="Lien vers la page Support">Support</a>
+          <a href="contact.html" class="light last-nav" aria-label="Lien vers la page Contact">Contact</a>
+          <div class="social-networks" aria-label="Réseaux sociaux">
+            <a href="#" aria-label="Lien vers Instagram" title="Suivez nous sur l'Instagram de serv'drone"><span class="fa fa-instagram fa-2x"></span></a>
+            <a href="#" aria-label="Lien vers Twitter" title="Suivez nous sur le Twitter de serv'drone"><span class="fa fa-twitter-square fa-2x"></span></a>
+            <a href="#" class="last-nav" aria-label="Lien vers Facebook" title="Suivez nous sur le Facebook de serv'drone"><span class="fa fa-facebook-square fa-2x"></span></a>
           </div>
         </nav>
       </div>
@@ -36,85 +41,73 @@
   </div>
 
   <div class="container">
-    <div class="presentation">
-      <h1 class="prenstation-title">Qui sommes nous ?</h1>
-      <p>Tout a un commencement</p>
+    <div class="presentation" aria-label="Présentation de Serv'Drone">
+      <h1 class="prenstation-title" aria-label="Titre de la section Qui sommes nous">Qui sommes-nous ?</h1>
+      <p aria-label="Sous-titre">Tout a un commencement</p>
     </div>
   </div>
 </header>
 <body>
-    <section class="first_part">
-        <h2 class="title text-center">START-UP</h2>
-        <p>Serv’drone est une start-up française créée en 2016 par trois amis d’enfance
-            passionnés par l’IoT (Les objets connectés).
-        </p>
-        <p>Leur objectif principal est d’allier technologie et service à la personne. Serv’drone commercialise des
-            drones nouvelle génération aux fonctions révolutionnaires comme escorter vos enfants sur le chemin de
-            l’école, promener vos animaux domestiques, récupérer vos colis à la poste, retrouver vos clés égarées. Bref
-            la technologie au service du quotidien.
-        </p>
+    <section class="first_part" aria-label="Présentation de la start-up Serv'Drone">
+        <h2 class="title text-center" aria-label="Titre de la section">START-UP</h2>
+        <p>Serv'Drone est une start-up française fondée en 2016 par trois amis d'enfance passionnés par l'IoT (Internet des Objets). Notre mission est de combiner technologie de pointe et services de confort domestique pour améliorer votre vie quotidienne.</p>
+        <p>Nous proposons une gamme de drones multifonctionnels, adaptés à l'usage domestique, avec des fonctionnalités innovantes telles que l'escorte avancée d'enfants, la promenade d'animaux, la récupération de colis, et la recherche de clés égarées. Grâce à Serv'Drone, la technologie devient votre alliée au quotidien.</p>
     </section>
-    <section class="second_part">
-        <h2 class="title text-center">FONDATEURS</h2>
-        <div class="picture_direction_left">
+    <section class="second_part" aria-label="Présentation des fondateurs de Serv'Drone">
+        <h2 class="title text-center" aria-label="Titre de la section">FONDATEURS</h2>
+        <div class="picture_direction_left" aria-label="Portrait et description de Tom, un des fondateurs de Serv'Drone">
             <div class="picture_portraitfirstpart">
-                <img src="images/fondateur1.png">
+                <img src="images/fondateur1.png" alt="Portrait de Tom">
             </div>
             <div class="text_direction_left">
-                <h3>Tom</h3>
-                <p>Après avoir perdu des millions d’amis sur Myspace, Tom trouve une idée lumineuse en proposant à deux
-                    camarades de créer Serv’Drone.
-                </p>
+                <h3 aria-label="Nom du fondateur">Tom</h3>
+                <p>Après avoir connu la disparition de Myspace, Tom a eu l'idée lumineuse de créer Serv'Drone avec deux camarades, révolutionnant ainsi les services à la personne grâce aux drones.</p>
             </div>
         </div>
-        <div class="picture_direction_right">
+        <div class="picture_direction_right" aria-label="Portrait et description de Jonathan, un des fondateurs de Serv'Drone">
             <div class="picture_portraitsecondpart_mobile">
-                <img src="images/fondateur2.png">
+                <img src="images/fondateur2.png" alt="Portrait de Jonathan">
             </div>
             <div class="text_direction_right">
-                <h3 class="direction_right">Jonathan</h3>
-                <p>Ne vous fiez pas à son jeune âge, Jonathan n’attend pas et se lance très tôt dans les nouvelles
-                    technologies avec Serv’Drone.
-                </p>
+                <h3 class="direction_right" aria-label="Nom du fondateur">Jonathan</h3>
+                <p>Malgré son jeune âge, Jonathan est un prodige des nouvelles technologies. Avec Serv'Drone, il se lance très tôt dans l'innovation pour proposer des services d'assistance quotidienne.</p>
             </div>
             <div class="picture_portraitsecondpart_pc">
-                <img src="images/fondateur2.png">
+                <img src="images/fondateur2.png" alt="Portrait de Jonathan">
             </div>
         </div>
-        <div class="picture_direction_left">
+        <div class="picture_direction_left" aria-label="Portrait et description d'Arturo, un des fondateurs de Serv'Drone">
             <div class="picture_portraitthirdpart">
-                <img src="images/fondateur3.png">
+                <img src="images/fondateur3.png" alt="Portrait d'Arturo">
             </div>
             <div class="text_direction_left">
-                <h3>Arturo</h3>
-                <p>Après une sombre histoire de braquage en Espagne, Arturo a décidé de rejoindre Serv’Drone pour
-                    assurer la sécurité des concitoyens.
-                </p>
+                <h3 aria-label="Nom du fondateur">Arturo</h3>
+                <p>Ayant vécu une histoire mouvementée en Espagne, Arturo a rejoint Serv'Drone pour contribuer à la sécurité domestique et la protection avancée de nos concitoyens.</p>
             </div>
         </div>
     </section>
-    <footer class="footer"> 
+    <footer class="footer" aria-label="Pied de page avec liens et réseaux sociaux"> 
       <div class="container">
-        <div class="rubriques">
-          <h3>Rubriques</h3>
-          <a href="about.html">Qui sommes-nous ?</a>
-          <a href="services.html">Nos services</a>
-          <a href="events.html">Évènements</a>
-          <a href="story.html">Histoire</a>
+        <div class="rubriques" aria-label="Rubriques du site">
+          <h3 aria-label="Titre de la section Rubriques">Rubriques</h3>
+          <a href="#" aria-label="Lien vers la section Qui sommes-nous ?" title="Découvrez l'histoire de serv'drone">Qui sommes-nous ?</a>
+          <a href="services.html" aria-label="Lien vers la page Nos services" title="Découvrez notre gamme de drones domestique">Nos services</a>
+          <a href="story.html" aria-label="Lien vers la page Histoire" title="Découvrez l'histoire de serv'drone">Histoire</a>
+          <a href="event.html" aria-label="Lien vers la page Évènement" title="Découvrez les éveènements de drone autour de NOMDELAVILLE">Évènement</a>
         </div>
-        <div class="rubriques">
-          <a href="support.html">Support</a>
-          <a href="contact.html">Contact</a>
+        <div class="rubriques" aria-label="Liens de support">
+          <a href="support.html" aria-label="Lien vers la page Support">Support</a>
+          <a href="contact.html" aria-label="Lien vers la page Contact">Contact</a>
         </div>
-        <div class="rubriques rubrique-3">
-          <a href="mentions.html" class="light">Mentions légales</a>
-          <a href="mentions.html" class="light">Conditions générales d'utilisation</a>
+        <div class="rubriques rubrique-3" aria-label="Liens légaux">
+          <a href="mentions.html" class="light" aria-label="Lien vers les mentions légales">Mentions légales</a>
+          <a href="mentions.html" class="light" aria-label="Lien vers les conditions générales d'utilisation">Conditions générales d'utilisation</a>
         </div>
       </div>
-      <div class="footer-social-networks">
-        <a href="#"><span class="fa fa-instagram fa-2x"></span></a>
-        <a href="#"><span class="fa fa-twitter-square fa-2x"></span></a>
-        <a href="#" class="last-nav"><span class="fa fa-facebook-square fa-2x"></span></a>
+      <div class="footer-social-networks" aria-label="Réseaux sociaux">
+        <a href="#" aria-label="Lien vers Instagram"><span class="fa fa-instagram fa-2x"></span></a>
+        <a href="#" aria-label="Lien vers Twitter"><span class="fa fa-twitter-square fa-2x"></span></a>
+        <a href="#" class="last-nav" aria-label="Lien vers Facebook"><span class="fa fa-facebook-square fa-2x"></span></a>
       </div>
     </footer>
 </body>
