--- a/mentions.html
+++ b/mentions.html
@@ -15,24 +15,24 @@
   </head>
   <body>
     <header class="header header-small header-4">
-        <div class="navbar">
-          <div class="container container-navbar">
-            <a href="index.html"><img src="images/icon.png"></a>
-            <nav class="nav">
-              <a href="about.html" class="bold">Qui sommes-nous ?</a>
-              <a href="services.html" class="bold">Nos services</a>
-              <a href="story.html" class="light">Histoire</a>
-              <a href="event.html" class="light">Évènement</a>
-              <a href="support.html" class="light">Support</a>
-              <a href="contact.html" class="light last-nav">Contact</a>
-              <div class="social-networks">
-                <a href="#"><span class="fa fa-instagram fa-2x"></span></a>
-                <a href="#"><span class="fa fa-twitter-square fa-2x"></span></a>
-                <a href="#" class="last-nav"><span class="fa fa-facebook-square fa-2x"></span></a>
-              </div>
-            </nav>
-          </div>
+      <div class="navbar">
+        <div class="container container-navbar">
+          <a href="index.html" aria-label="Lien vers la page d'accueil"><img src="images/icon.png" alt="Icone Serv'Drone"></a>
+          <nav class="nav" aria-label="Navigation principale">
+            <a href="#" class="bold active" aria-label="Lien vers la section Qui sommes-nous ?" title="Découvrez l'histoire de serv'drone">Qui sommes-nous ?</a>
+            <a href="services.html" class="bold" aria-label="Lien vers la page Nos services" title="Découvrez notre gamme de drones domestique">Nos services</a>
+            <a href="story.html" class="light" aria-label="Lien vers la page Histoire" title="Découvrez l'histoire de serv'drone">Histoire</a>
+            <a href="event.html" class="light" aria-label="Lien vers la page Évènement" title="Découvrez les éveènements de drone autour de NOMDELAVILLE">Évènement</a>
+            <a href="support.html" class="light" aria-label="Lien vers la page Support">Support</a>
+            <a href="contact.html" class="light last-nav" aria-label="Lien vers la page Contact">Contact</a>
+            <div class="social-networks" aria-label="Réseaux sociaux">
+              <a href="#" aria-label="Lien vers Instagram" title="Suivez nous sur l'Instagram de serv'drone"><span class="fa fa-instagram fa-2x"></span></a>
+              <a href="#" aria-label="Lien vers Twitter" title="Suivez nous sur le Twitter de serv'drone"><span class="fa fa-twitter-square fa-2x"></span></a>
+              <a href="#" class="last-nav" aria-label="Lien vers Facebook" title="Suivez nous sur le Facebook de serv'drone"><span class="fa fa-facebook-square fa-2x"></span></a>
+            </div>
+          </nav>
         </div>
+      </div>
       </div>
  
       <div class="container">
