--- a/support.html
+++ b/support.html
@@ -7,6 +7,17 @@
     <link rel="icon" type="image/png" href="images/icon.png">
     <title>Serv'Drone</title>
 
+    <meta name="description" content="Page de support de Serv'Drone offrant des directives de sécurité de vol pour drones, ainsi que des informations pour contacter notre service technique en cas de besoin.">
+    <meta property="og:title" content="Support | Serv'Drone">
+    <meta property="og:description" content="Découvrez les directives de sécurité pour les drones et comment contacter le support technique de Serv'Drone pour toute assistance nécessaire.">
+    <meta property="og:image" content="images/icon.png">
+    <meta property="og:url" content="URL_DE_LA_PAGE_DE_SUPPORT">
+    <meta property="og:type" content="website">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="Support | Serv'Drone">
+    <meta property="twitter:description" content="Page de support de Serv'Drone avec des directives de sécurité de vol pour drones et les coordonnées du service technique.">
+    <meta property="twitter:image" content="images/icon.png"> 
+
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
@@ -15,24 +26,24 @@
   </head>
   <body>
     <header class="header header-small header-6">
-        <div class="navbar">
-          <div class="container container-navbar">
-            <a href="index.html"><img src="images/icon.png"></a>
-            <nav class="nav">
-              <a href="about.html" class="bold">Qui sommes-nous ?</a>
-              <a href="services.html" class="bold">Nos services</a>
-              <a href="story.html" class="light">Histoire</a>
-              <a href="event.html" class="light">Évènement</a>
-              <a href="#" class="light active">Support</a>
-              <a href="contact.html" class="light last-nav">Contact</a>
-              <div class="social-networks">
-                <a href="#"><span class="fa fa-instagram fa-2x"></span></a>
-                <a href="#"><span class="fa fa-twitter-square fa-2x"></span></a>
-                <a href="#" class="last-nav"><span class="fa fa-facebook-square fa-2x"></span></a>
-              </div>
-            </nav>
-          </div>
+      <div class="navbar">
+        <div class="container container-navbar">
+          <a href="index.html" aria-label="Lien vers la page d'accueil"><img src="images/icon.png" alt="Icone Serv'Drone"></a>
+          <nav class="nav" aria-label="Navigation principale">
+            <a href="#" class="bold active" aria-label="Lien vers la section Qui sommes-nous ?" title="Découvrez l'histoire de serv'drone">Qui sommes-nous ?</a>
+            <a href="services.html" class="bold" aria-label="Lien vers la page Nos services" title="Découvrez notre gamme de drones domestique">Nos services</a>
+            <a href="story.html" class="light" aria-label="Lien vers la page Histoire" title="Découvrez l'histoire de serv'drone">Histoire</a>
+            <a href="event.html" class="light" aria-label="Lien vers la page Évènement" title="Découvrez les éveènements de drone autour de NOMDELAVILLE">Évènement</a>
+            <a href="support.html" class="light" aria-label="Lien vers la page Support">Support</a>
+            <a href="contact.html" class="light last-nav" aria-label="Lien vers la page Contact">Contact</a>
+            <div class="social-networks" aria-label="Réseaux sociaux">
+              <a href="#" aria-label="Lien vers Instagram" title="Suivez nous sur l'Instagram de serv'drone"><span class="fa fa-instagram fa-2x"></span></a>
+              <a href="#" aria-label="Lien vers Twitter" title="Suivez nous sur le Twitter de serv'drone"><span class="fa fa-twitter-square fa-2x"></span></a>
+              <a href="#" class="last-nav" aria-label="Lien vers Facebook" title="Suivez nous sur le Facebook de serv'drone"><span class="fa fa-facebook-square fa-2x"></span></a>
+            </div>
+          </nav>
         </div>
+      </div>
       </div>
  
       <div class="container">
